[package]
name = "shoe-rs"
version = "0.1.0"
edition = "2024"
description = "Cactus Kev's playing card dealing shoe library for Rust"
license = "LGPL-3.0"

[dependencies]
num-derive = "0.4.2"
num-traits = "0.2.19"

[dev-dependencies]
rstest = "0.25"
rstest_reuse = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
